[tool.poetry]
name = "selenium-pack"
version = "0.1.0"
description = ""
authors = ["our ame <you@example.com>"]
readme = "README.md"
packages = [{include = "selenium_pack"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
