[tool.poetry]
name = "selenium-pack"
version = "0.1.0"
description = ""
authors = ["Denis Kustov <denis-kustov@rambler.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.8.0"
requests-html= "0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
